--- a/math/Kuo-integral.bib
+++ b/math/Kuo-integral.bib
@@ -53,16 +53,6 @@
 	doi = {10.31390/cosa.8.1.07},
 	url = {https://digitalcommons.lsu.edu/cosa/vol8/iss1/8}}
 
-@inbook{doi:10.1142/9789814447546_0014,
-	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
-	title = {And isometry formula for a new stochastic integral},
-	booktitle = {Quantum Probability and Related Topics},
-	pages = {222--232},
-	doi = {10.1142/9789814447546_0014},
-	URL = {https://www.worldscientific.com/doi/abs/10.1142/9789814447546_0014},
-	eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789814447546_0014},
-	abstract = {The isometry formula for the Itô integral is generalized to a new stochastic integral involving both adapted and instantly independent stochastic processes. The proof is rather elementary. An example is given to illustrate the isometry formula.}}
-
 @article{KuoPengSzozda2013b,
 	author = {Kuo, Hui-Hsiung and Peng, Yun and Szozda, Benedykt},
 	title = {Generalization of the anticipative Girsanov theorem},
@@ -95,6 +85,18 @@
 	article = 5,
 	doi = {10.31390/cosa.7.2.05},
 	url = {https://digitalcommons.lsu.edu/cosa/vol7/iss2/5}}
+
+@inbook{KuoSaeTangSzozda2013,
+	author = {Kuo, Hui-Hsiung and Sae-Tang, Anuwat and Szozda, Benedykt},
+	title = {And isometry formula for a new stochastic integral},
+	booktitle = {Quantum Probability and Related Topics},
+	pages = {222--232},
+	year = 2013,
+	volume = 29,
+	doi = {10.1142/9789814447546_0014},
+	URL = {https://www.worldscientific.com/doi/abs/10.1142/9789814447546_0014},
+	eprint = {https://www.worldscientific.com/doi/pdf/10.1142/9789814447546_0014},
+	abstract = {The isometry formula for the Itô integral is generalized to a new stochastic integral involving both adapted and instantly independent stochastic processes. The proof is rather elementary. An example is given to illustrate the isometry formula.}}
 
 @article{KuoSaeTangSzozda2012,
 	author = {Kuo, Hui-Hsiung Sae-Tang, Anuwat and Szozda, Benedykt},
